UPD Adicionada colunas isRealized e realizedDate na entidade Transaction